# PlanesCryptoBot

./: README.md  pyproject.toml
bot/config/: config.py
bot/core/: tapper.py
bot/core/core/: headers.py
bot/utils/: __init__.py  launcher.py  schemas.py
