[tool.poetry]
name = "planescryptobot"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydantic-settings = "^2.7.0"
aiohttp = "^3.11.10"
aiohttp-proxy = "^0.1.2"
better-proxy = "^1.2.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
art = "^6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
